# abilityFramework

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CONTROLLER_README.md  Makefile  README.md  abilityProto.grpc.pb.cc  auto-build.sh  cmake_install.cmake  compile_logs  controller.md  integrate.sh  vdp.md  类图分析.pu  结构.pu  设计.pu
config/: camera_controller.yaml  config.yaml  controller_config.yaml  metadata.yaml  mobile_ability.yaml  mobile_controller.yaml  mobile_monitor_controller.yaml  start_config.yaml  testconfig.yaml
include/_abilitymanager_old/: abi_interface.h
include/_controller_old/: cloud_tcp_connection.h  connection_manager.h  controller.h  dbmanager.h  edge_udp_connection.h  global_var.h
include/_discoverymanager_old/: cam_interface.h  devpool_interface.h
include/_plugincore_old/: abimgr_interface.h  lifecycle_interface.h  obs_interface.h  subject_mgr.h
include/abilitymanager/: abi_interface.h
include/abilitymgr/: ability_manager.h  ability_message.h
include/abilityrelationmgr/: ability_instance_info_extract.h  ability_relation_manager.h  depend_tree_array.h
include/abilitystatusmgr/: ability_status_manager.h
include/broadcastmgr/: broadcast_manager.h
include/connectionmgr/: Iconnection.h  connect_by_ble.h  connect_by_http.h  connect_by_tcp.h  connect_by_udp.h  connect_by_websocket.h  connect_info.h  connection_manager.h
include/connmanager/: conn_interface.h
include/controller/: cloud_connection.h  controller.h  dbmanager.h  edge_connection.h  global_var.h  json_yaml_convert.h  message_package_struct.h
include/controllermgr/: controller_heartbeat_info.h  controller_manager.h
include/databasemgr/: database_manager.h  database_store_struct.h  yaml_json_converter.h
include/discoverymanager/: audio_interface.h  cam_interface.h  devpool_interface.h  disc_interface.h  discmgr_interface.h  disp_interface.h  localhw_interface.h  system_interface.h
include/discoverymgr/: ble_discovery.h  device_pool.h  discovery_device_info.h  discovery_manager.h  lan_ipv4_discovery.h  system_interface.h  udp_discovery.h
include/eventhandler/: eventhandler.h
include/httpserver/: http_server.h
include/lifecyclemgr/: abilityclient.h  command_info.h  heartbeat_info.h  lifecycle_manager.h
include/plugincore/: abimgr_interface.h  event_interface.h  lifecycle_interface.h  obs_interface.h  plugin_interface.h  subject_mgr.h
include/protos/: abilityProto.grpc.pb.h  abilityProto.pb.h  abilityProto.pb.h_old
include/resourcemgr/: ability.h  ability_info.h  ability_instance_info.h  audio_hardware.h  camera_hardware.h  cameradevice_instance.h  common_struct_defination.h  device_instance_camera.h  device_instance_general.h  device_instance_info.h  device_instance_loudspeaker.h  device_instance_microphone.h  device_instance_sensor.h  device_profile.h  display_hardware.h  hardware_audio.h  hardware_camera.h  hardware_device_profile.h  hardware_device_resource_manager.h  hardware_display.h  hardware_scan.h  instance_info.h  louspeakerdevice_instance.h  message_package_struct.h  microphonedevice_instance.h  nonlocal_resource_info.h  resource_manager.h  resource_sync_manager.h  sensordevice_instance.h
include/utils/: color.h  global_var.h  net_interface.h  yaml_json_converter.h
lib/modules/: libModule_A.dylib  libability_mgr.dylib  libconnection_mgr.dylib
lib/shared/: libglog.so.0.6.0  libyaml-cpp.so.0.7.0
log/: abiltyframework-cpp.ERROR  abiltyframework-cpp.INFO  abiltyframework-cpp.WARNING  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-172508.60325  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-194158.98958  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-213145.103671  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-213556.104628  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-214707.105213  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-215756.105827  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-221716.106796  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-222402.107225  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-224831.108056  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230722-225315.108292  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230723-012234.115021  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230723-012247.115136  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230723-012315.115565  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.INFO.20230723-012504.115891  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.WARNING.20230722-172508.60325  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.WARNING.20230722-194230.98958  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.WARNING.20230722-213145.103671  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.WARNING.20230722-213556.104628  abiltyframework-cpp.wtq-Nitro-AN515-58.wtq.log.WARNING.20230722-214707.105213
mock_ability/camera/: camera.cpp  camera1.cpp  camera2.cpp
mock_ability/display/: display1.cpp  display2.cpp
mock_ability/light/: light1.cpp  light2.cpp  light3.cpp  light4.cpp  light5.cpp
mock_ability/loudspeaker/: loudspeaker1.cpp
mock_ability/motionTrigger/: motionTrigger1.cpp
resource/db/: ability.db
resource_backup/: camera_ability.yaml  display_ability.yaml  loudspeaker_ability.yaml  sensor_ability.yaml
src/: main.cpp
test/: audio_ck.cpp  audio_ck_portaudio.cpp.deprecated  audio_ck_pulseaudio.cpp.deprecated  audio_link_ck_pulseaudio.cpp  cam_ck_v4l.cpp  disp_ck.cpp  http_server.cpp  test_ability_depend_tree.cpp  test_ability_depend_tree_with_devices.cpp  test_ability_hash.cpp  test_ability_lifecycle.cpp  test_camera_hardware.cpp  test_display_hardware.cpp  test_get_abilityrunning.cpp  test_get_abilitysupport.cpp  test_get_device.cpp  test_http_command.cpp  test_mic_hardware.cpp  test_post_abilityrequest.cpp  test_post_connect_abilityrequest.cpp  test_post_disconnect_abilityrequest.cpp  test_post_start_abilityrequest.cpp  test_post_terminate_abilityrequest.cpp  test_speaker_hardware.cpp  测试.json
(+164 files in other folders)
